Remove background color from video controls

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div
                 class="video-controls absolute bottom-4 left-4 right-4 flex items-center gap-3 opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
                 <button
-                  class="video-play-pause w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                  class="video-play-pause w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                   <svg class="play-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
@@ -158,7 +158,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></button> <button
-                  class="video-mute w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                  class="video-mute w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                   <svg class="mute-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
@@ -488,7 +488,7 @@
                 <div
                   class="video-controls absolute bottom-4 left-4 right-4 flex items-center gap-3 opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
                   <button
-                    class="video-play-pause w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-play-pause w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="play-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
@@ -499,7 +499,7 @@
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg></button> <button
-                    class="video-mute w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-mute w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="mute-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
@@ -593,7 +593,7 @@
                 <div
                   class="video-controls absolute bottom-4 left-4 right-4 flex items-center gap-3 opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
                   <button
-                    class="video-play-pause w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-play-pause w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="play-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
@@ -604,7 +604,7 @@
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg></button> <button
-                    class="video-mute w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-mute w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="mute-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
@@ -674,7 +674,7 @@
                 <div
                   class="video-controls absolute bottom-4 left-4 right-4 flex items-center gap-3 opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
                   <button
-                    class="video-play-pause w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-play-pause w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="play-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
@@ -685,7 +685,7 @@
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg></button> <button
-                    class="video-mute w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-mute w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="mute-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
@@ -808,7 +808,7 @@
                 <div
                   class="video-controls absolute bottom-4 left-4 right-4 flex items-center gap-3 opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
                   <button
-                    class="video-play-pause w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-play-pause w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="play-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
@@ -819,7 +819,7 @@
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg></button> <button
-                    class="video-mute w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-mute w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="mute-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
@@ -942,7 +942,7 @@
                 <div
                   class="video-controls absolute bottom-4 left-4 right-4 flex items-center gap-3 opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
                   <button
-                    class="video-play-pause w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-play-pause w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="play-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
@@ -953,7 +953,7 @@
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg></button> <button
-                    class="video-mute w-10 h-10 bg-black/70 backdrop-blur-sm border border-pink-500/30 rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
+                    class="video-mute w-10 h-10 border rounded-full flex items-center justify-center text-pink-400 hover:bg-pink-500/20 hover:border-pink-500 transition-all">
                     <svg class="mute-icon w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
@@ -1059,7 +1059,7 @@
       </nav><!-- Project Hero and Visual Side by Side -->
       <section class="relative pt-20 pb-32 grid-pattern">
         <div class="absolute inset-0 pointer-events-none overflow-hidden">
-          <div class="absolute top-20 right-10 w-96 h-96 bg-pink-500/10 rounded-full blur-3xl animate-pulse-slow"></div>
+          <div class="absolute top-20 right-10 w-96 h-96 rounded-full blur-3xl animate-pulse-slow"></div>
         </div>
         <div class="max-w-7xl mx-auto px-6 relative z-10">
           <div class="grid lg:grid-cols-2 gap-12 items-center"><!-- Left: Project Hero Content -->
@@ -1074,13 +1074,13 @@
             </div><!-- Right: Project Visual Hero -->
             <div id="project-visual-container"><!-- Default single image/icon view -->
               <div id="default-visual"
-                class="aspect-square project-image-placeholder flex overflow-hidden relative">
+                class="aspect-square flex overflow-hidden relative">
 
                 <!-- Dynamic image / video will be injected here -->
                 <div id="project-visual" class="absolute inset-0"></div>
 
                 <div
-                  class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent pointer-events-none">
+                  class="absolute inset-0 pointer-events-none">
                 </div>
               </div>
               <!-- Special 4-box grid for project 1 (hidden by default) -->
@@ -1089,7 +1089,7 @@
                     src="./assets/branding/visit card.jpg?auto=format&amp;fit=crop" alt="Project image 1"
                     class="w-full h-full object-cover" loading="lazy"
                     onerror="console.error('Image failed to load:', this.src); this.alt='Image unavailable'; this.src='';">
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
+                  <div class="absolute inset-0"></div>
                 </div><!-- Box 2 - Carousel -->
                 <div class="rounded-2xl overflow-hidden relative carousel-container">
                   <div class="carousel-wrapper w-full h-full relative overflow-hidden">
@@ -1106,19 +1106,19 @@
                         onerror="console.error('Image failed to load:', this.src); this.alt='Image unavailable'; this.src='';">
                     </div>
                   </div>
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent pointer-events-none"></div>
+                  <div class="absolute inset-0 pointer-events-none"></div>
                 </div><!-- Box 3 - Static Image -->
                 <div class="rounded-2xl overflow-hidden relative"><img
                     src="./assets/branding/billboard.jpg?auto=format&amp;fit=crop" alt="Project image 2"
                     class="w-full h-full object-cover" loading="lazy"
                     onerror="console.error('Image failed to load:', this.src); this.alt='Image unavailable'; this.src='';">
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
+                  <div class="absolute inset-0"></div>
                 </div><!-- Box 4 - Static Image -->
                 <div class="rounded-2xl overflow-hidden relative"><img
                     src="./assets/branding/poster.jpg?auto=format&amp;fit=crop" alt="Project image 3"
                     class="w-full h-full object-cover" loading="lazy"
                     onerror="console.error('Image failed to load:', this.src); this.alt='Image unavailable'; this.src='';">
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
+                  <div class="absolute inset-0"></div>
                 </div>
               </div>
             </div>
@@ -1433,6 +1433,7 @@
               const img = document.createElement("img");
               img.src = project.mediaSrc;
               img.alt = project.title || "Project image";
+              img.className = 'rounded-2xl',
               container.appendChild(img);
             }
 
@@ -1441,6 +1442,7 @@
               video.src = project.mediaSrc;
               video.autoplay = true;
               video.loop = true;
+              video.className = 'rounded-2xl',
               video.muted = true;
               video.playsInline = true;
               video.controls = true;
